# test_itsolutions

./: .gitignore  README.md  db.sqlite3  pyproject.toml
cashflow/: admin.py  forms.py  models.py  urls.py  views.py
cashflow/migrations/: 0001_initial.py  0002_alter_cashflow_options_alter_category_options_and_more.py  0003_alter_cashflow_created_at.py  0004_alter_cashflow_options.py  0005_alter_cashflow_options.py
config/: settings.py  urls.py
pages/: urls.py  views.py
static/js/: scripts.js
templates/cashflow/: _base.html  _header.html  confirm_deletecashflow.html  createflow.html  flow_create.html  flow_list.html  flow_update.html  listflow.html  refrence_category_confirm_delete.html  refrence_category_create.html  refrence_category_update.html  refrence_data.html  refrence_list.html  refrence_statusflow_confirm_delete.html  refrence_statusflow_create.html  refrence_statusflow_update.html  refrence_subcategory_confirm_delete.html  refrence_subcategory_create.html  refrence_subcategory_update.html  refrence_typeflow_confirm_delete.html  refrence_typeflow_create.html  refrence_typeflow_update.html  updateflow.html
