[tool.poetry]
name = "cashflow"
version = "0.1.0"
description = ""
authors = ["VasyaPupkin120 <VPupkinza@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
django-stubs = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
